[package]
name = "hapi-sys"
version = "0.1.0"
license = "MIT"
description = "Raw bindings to SideFx Houdini Engine API"
authors = ["alexxbb <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
heck = "0.3.1"
bindgen = "0.55.1"
once_cell = "1.5.2"

[features]
default = []
rustify = []