[package]
name = "hapi-sys"
version = "0.2.0"
license = "MIT"
description = "Raw bindings to SideFx Houdini Engine API"
authors = ["alexxbb <hou.alexx@gmail.com>"]
repository = "https://github.com/alexxbb/hapi-sys"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
heck = "0.4.0"
bindgen = "0.60.1"
once_cell = "1.5.2"

[features]
default = ["rustify"]
rustify = []